hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_bottom_pass_integer.php
<?php

$list = new SplDoublyLinkedList();
$list->push("top");
$list->bottom(45);

?>